Fix some webserver bugs/add new functionality Some small adds to the android project stuff

--- a/Android/AtTable/app/src/main/res/values/strings.xml
+++ b/Android/AtTable/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">AtTable</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">\@Table</string>
     <string name="action_settings">Settings</string>
-    <string name="scan_button">Scan!</string>
-    <string name="barcode_id"></string>
+    <string name="scan_button">Scan QRCode!</string>
+    <string name="title_activity_order_select">OrderSelect</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
