Adds the order view (without images for now)

--- a/Android/AtTable/app/src/main/res/values/strings.xml
+++ b/Android/AtTable/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="scan_button">Scan QRCode!</string>
     <string name="title_activity_order_select">OrderSelect</string>
     <string name="hello_world">Hello world!</string>
+    <string name="order_title">Order Menu:</string>
 
 </resources>
