Finish order selection

--- a/Android/AtTable/app/src/main/res/values/strings.xml
+++ b/Android/AtTable/app/src/main/res/values/strings.xml
@@ -7,5 +7,9 @@
     <string name="title_activity_order_select">OrderSelect</string>
     <string name="hello_world">Hello world!</string>
     <string name="order_title">Order Menu:</string>
+    <string name="order_proceed">Proceed to Overview!</string>
+    <string name="title_activity_order_overview">OrderOverview</string>
+    <string name="order_overview_title">Order Overview:</string>
+    <string name="order_submit">Submit Order!</string>
 
 </resources>
